# ai-proctoring-system

./: .gitignore  Dockerfile.backend  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
ai_engine/: logger.py
ai_engine/audio_module/: vad.py
ai_engine/behaviour_module/: anomaly_detector.py
ai_engine/face_module/: continuous_liveness.py  detector.py  liveliness.py  recognizer.py
ai_engine/gaze_module/: gaze_tracker.py
ai_engine/head_pose_module/: pose_estimator.py
ai_engine/object_detector/: yolo_detector.py
ai_engine/risk_engine/: integrity_scorer.py  scoring.py
ai_engine/room_module/: room_scan.py
api/v1/: admin.py  auth.py  exam.py  monitoring.py  reports.py  room.py  state.py
core/: config.py  logging_config.py  security.py
db/: models.py  session.py
demo/: Screencast from 2026-04-14 14-26-46.webm  Screencast from 2026-04-14 14-33-33.webm
frontend/: Dockerfile.frontend  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.css  index.js
frontend/src/components/: FaceVerifyModal.js  GazeHeatmap.js  IntegrityReport.js  RiskMeter.js  ViolationAlert.js  ViolationSidebar.js
frontend/src/context/: AuthContext.js
frontend/src/hooks/: useAdminSocket.js  useProctorSocket.js
frontend/src/pages/: AdminPage.js  DashboardPage.js  EnrollPage.js  ExamPage.js  LoginPage.js  ReportPage.js  RoomScanPage.js
frontend/src/services/: api.js
frontend/src/styles/: global.css  styles.js  theme.js
schemas/: auth_schema.py
services/: alert_service.py  report_services.py
tests/: test_suite.py
tools/: enroll_face.py
workers/: video_worker.py
