[project]
name = "ai-proctoring-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "absl-py==2.4.0",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "bcrypt==4.0.1",
    "certifi==2026.2.25",
    "cffi==2.0.0",
    "charset-normalizer==3.4.6",
    "click==8.3.1",
    "contourpy==1.3.3",
    "cryptography==46.0.5",
    "cycler==0.12.1",
    "dnspython==2.8.0",
    "ecdsa==0.19.1",
    "email-validator==2.3.0",
    "facenet-pytorch==2.5.3",
    "fastapi==0.135.1",
    "filelock==3.25.2",
    "flatbuffers==25.12.19",
    "fonttools==4.62.1",
    "fsspec==2026.2.0",
    "greenlet==3.3.2",
    "h11==0.16.0",
    "httptools==0.7.1",
    "httpx>=0.28.1",
    "idna==3.11",
    "jinja2==3.1.6",
    "kiwisolver==1.5.0",
    "markupsafe==3.0.3",
    "matplotlib==3.10.8",
    "mediapipe==0.10.33",
    "mpmath==1.3.0",
    "networkx==3.6.1",
    "numpy==2.4.3",
    "opencv-contrib-python==4.13.0.92",
    "opencv-python==4.13.0.92",
    "packaging==26.0",
    "passlib==1.7.4",
    "pillow==12.1.1",
    "polars==1.39.3",
    "polars-runtime-32==1.39.3",
    "psutil==7.2.2",
    "psycopg2-binary==2.9.11",
    "pyasn1==0.6.3",
    "pyaudio; sys_platform != 'win32'",
    "pycparser==3.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.13.1",
    "pyparsing==3.3.2",
    "pytest>=9.0.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "python-jose==3.5.0",
    "python-multipart==0.0.22",
    "pyyaml==6.0.3",
    "reportlab==4.4.10",
    "requests==2.32.5",
    "rsa==4.9.1",
    "scipy==1.17.1",
    "setuptools<81",
    "six==1.17.0",
    "sounddevice==0.5.5",
    "sqlalchemy==2.0.48",
    "starlette==1.0.0",
    "sympy==1.14.0",
    "torch",
    "torchaudio",
    "torchvision",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "ultralytics==8.4.24",
    "ultralytics-thop==2.0.18",
    "urllib3==2.6.3",
    "uvicorn==0.42.0",
    "uvloop==0.22.1; sys_platform != 'win32'",
    "watchfiles==1.1.1",
    "webrtcvad==2.0.10",
    "websockets==16.0",
]
[tool.pytest.ini_options]
markers = [
    "unit: unit tests — no server or DB needed",
    "api:  API integration tests — requires running server",
]
